--- a/mongodb_replica/compose.yaml
+++ b/mongodb_replica/compose.yaml
@@ -1,14 +1,14 @@
-name: mongodb_replica
-
+name: "mongodb_replica"
 services:
   mongo:
-    build: ./Dockerfile
+    build: .
     image: mongo
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: root
       MONGO_REPLICA_HOST: localhost
       MONGO_REPLICA_PORT: 27017
+      MONGO_COMMAND: mongosh
     ports:
       - 27017:27017
     volumes:
